--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <h5>Countries</h5>
     <table class="w3-table w3-striped w3-bordered w3-border w3-hoverable w3-white">
       <tr>
-        <td>United States</td>
+        <td>NZ AGS</td>
         <td>65%</td>
       </tr>
       <tr>
@@ -307,7 +307,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- Footer -->
   <footer class="w3-container w3-padding-16 w3-light-grey">
     <h4>FOOTER</h4>
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+    <p> SANJAY AGS COPYRIGHT 2019 ALL RIGHTS RESERVED
   </footer>
 
   <!-- End page content -->
