--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- Footer -->
   <footer class="w3-container w3-padding-16 w3-light-grey">
     <h4>FOOTER</h4>
-    <p> SANJAY AGS COPYRIGHT 2019 ALL RIGHTS RESERVED
+    <p> SANJAY AGS COPYRIGHT 2019 ALL RIGHTS RESERVED </P>
   </footer>
 
   <!-- End page content -->
