--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body, html {height: 100%}
 </html>
 <!DOCTYPE html>
 <html>
-<title>SANJAY AGS 2019</title>
+<title>SANJAY AGS 2019 R</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -93,7 +93,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
   <!-- Header -->
   <header class="w3-container" style="padding-top:22px">
-    <h5><b><i class="fa fa-dashboard"></i> My Dashboard</b></h5>
+    <h5><b><i class="fa fa-dashboard"></i> SANJAY AGS 2019 STATISTICS</b></h5>
   </header>
 
   <div class="w3-row-padding w3-margin-bottom">
