--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html {height: 100%}
     
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
+    <font color="gold">COMING SOON</font>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
 <font color="red">FEW DAYS LEFT</font>    
   </div>
