--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html {height: 100%}
     
   </div>
   <div class="w3-display-middle">
-    <font color="gold">COMING SOON</font>
+    <font color="gold" font size="60">COMING SOON</font>    
     <hr class="w3-border-grey" style="margin:auto;width:40%">
 <font color="red" font size="60">FEW DAYS LEFT</font>    
   </div>
