--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    <P>SANJAY AGS</P>
+    <font color="red" font size="16">SANJAY AGS 2019</font>    
     
   </div>
   <div class="w3-display-middle">
