--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body, html {height: 100%}
   <div class="w3-display-middle">
     <font color="gold" font size="60">COMING SOON</font>    
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-<font color="red" font size="30">FEW DAYS LEFT</font>    
+<font color="red" font size="30">WON'T BE LONG!- STATISTICS AVAILABLE DOWN BELOW</font>    
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
     
