--- a/index.html
+++ b/index.html
@@ -24,11 +24,8 @@ body, html {height: 100%}
     
   </div>
   <div class="w3-display-middle">
-   <font color="gold" font size="60"
-<marquee>
-behavior="scroll" direction="left" COMING SOON!
-<marquee>
-</font>
+   <font color="gold" font size="60"</font>
+
     <hr class="w3-border-grey" style="margin:auto;width:40%">
 <font color="red" font size="30">WON'T BE LONG!- STATISTICS AVAILABLE DOWN BELOW</font>    
   </div>
