--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body, html {height: 100%}
    <font color="gold" font size="60"</font>
 
     <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <font color="gold" font size="30">COMING SOON!!</font>
 <font color="red" font size="30">WON'T BE LONG!- STATISTICS AVAILABLE DOWN BELOW</font>    
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
