--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@ body, html {height: 100%}
     
   </div>
   <div class="w3-display-middle">
-   <font color="gold" font size="60"</font>
+   <img src="AGS-Print-COLOUR-1114.jpg" alt="AUCKLAND GRAMMAR SCHOOL" height="42" width="42">
 
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <font color="gold" font size="30">COMING SOON!!</font>
+    
 <font color="red" font size="30">WON'T BE LONG!- STATISTICS AVAILABLE DOWN BELOW</font>    
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
