--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html {height: 100%}
     
   </div>
   <div class="w3-display-middle">
-   <img src="AGS-Print-COLOUR-1114.JPG" alt="AUCKLAND GRAMMAR SCHOOL" height="42" width="42">
+   <img src="https://www.ags.school.nz/assets/Uploads/AGS-Print-COLOUR-1114.jpg" alt="AUCKLAND GRAMMAR SCHOOL" height="42" width="42">
 
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <font color="gold" font size="30">COMING SOON!!</font>
