--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ body, html {height: 100%}
     
 <font color="red" font size="30">WON'T BE LONG!- STATISTICS AVAILABLE DOWN BELOW</font>    
   </div>
+  <marquee behaviour="scroll" direction="left">ℂ𝕆ℙ𝕐ℝ𝕀𝔾ℍ𝕋 © 𝟚𝟘𝟙𝟡, 𝕊𝔸ℕ𝕁𝔸𝕐 𝔸𝔾𝕊<marquee>
+
   <div class="w3-display-bottomleft w3-padding-large">
     
   </div>
