--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@ body, html {height: 100%}
   min-height: 100%;
   background-position: center;
   background-size: cover;
-}
 </style>
 <body>
 
@@ -29,9 +28,10 @@ body, html {height: 100%}
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <font color="gold" font size="30">COMING SOON!!</font>
     
-<font color="red" font size="30">WON'T BE LONG!- STATISTICS AVAILABLE DOWN BELOW</font>    
+<font color="red" font size="30">WON'T BE LONG!- STATISTICS AVAILABLE DOWN BELOW</font>
+    <marquee behavior="scroll" direction="left">COPYRIGHT 2019 ALL RIGHTS RESERVED</marquee>
+
   </div>
-  <marquee behaviour="scroll" direction="left">ℂ𝕆ℙ𝕐ℝ𝕀𝔾ℍ𝕋 © 𝟚𝟘𝟙𝟡, 𝕊𝔸ℕ𝕁𝔸𝕐 𝔸𝔾𝕊<marquee>
 
   <div class="w3-display-bottomleft w3-padding-large">
     
