--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@ body, html {height: 100%}
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <font color="gold" font size="30">COMING SOON!!</font>
     
-<font color="red" font size="30">WON'T BE LONG!- STATISTICS AVAILABLE DOWN BELOW</font>
-    <marquee behavior="scroll" direction="left">COPYRIGHT 2019 ALL RIGHTS RESERVED</marquee>
-
-  </div>
+<font color="red" font size="30">WON'T BE LONG!- STATISTICS AVAILABLE DOWN BELOW</fon
 
   <div class="w3-display-bottomleft w3-padding-large">
     
