--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('/w3images/forestbridge.jpg');
+  background-image: url('/w3images/forestbridge.jpg')
   min-height: 100%;
   background-position: center;
   background-size: cover;
@@ -134,7 +134,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-container w3-orange w3-text-white w3-padding-16">
         <div class="w3-left"><i class="fa fa-users w3-xxxlarge"></i></div>
         <div class="w3-right">
-          <h3>50</h3>
+          <h3>2547</h3>
         </div>
         <div class="w3-clear"></div>
         <h4>Users</h4>
