--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </li>
       <li class="w3-padding-16">
         <img src="/w3images/avatar5.png" class="w3-left w3-circle w3-margin-right" style="width:35px">
-        <span class="w3-xlarge">AFTAB</span><br>
+        <span class="w3-xlarge">192.299.929</span><br>
       </li>
       <li class="w3-padding-16">
         <img src="/w3images/avatar6.png" class="w3-left w3-circle w3-margin-right" style="width:35px">
