--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <ul class="w3-ul w3-card-4 w3-white">
       <li class="w3-padding-16">
         <img src="/w3images/avatar2.png" class="w3-left w3-circle w3-margin-right" style="width:35px">
-        <span class="w3-xlarge">Mike</span><br>
+        <span class="w3-xlarge">192.288.929</span><br>
       </li>
       <li class="w3-padding-16">
         <img src="/w3images/avatar5.png" class="w3-left w3-circle w3-margin-right" style="width:35px">
@@ -254,7 +254,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </li>
       <li class="w3-padding-16">
         <img src="/w3images/avatar6.png" class="w3-left w3-circle w3-margin-right" style="width:35px">
-        <span class="w3-xlarge">JESS RHODES</span><br>
+        <span class="w3-xlarge">192.928.547</span><br>
       </li>
     </ul>
   </div>
