--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ body, html {height: 100%}
     
   </div>
   <div class="w3-display-middle">
+    <img src="https://www.ags.school.nz/assets/Uploads/AGS-Print-COLOUR-1114.jpg" alt="AGS" height="400" width="400">
     <font color="gold" font size="60">COMING SOON</font>    
     <hr class="w3-border-grey" style="margin:auto;width:40%">
 <font color="red" font size="30">WON'T BE LONG!- STATISTICS AVAILABLE DOWN BELOW</font>    
