--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>SANJAY AGS 2019</title>
   
-<meta charset="UTF-8">
+<meta charset="UF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -24,7 +24,7 @@ body, html {height: 100%}
     
   </div>
   <div class="w3-display-middle">
-    <img src="https://www.ags.school.nz/assets/Uploads/AGS-Print-COLOUR-1114.jpg" alt="AGS" height="400" width="400">
+    <img src="https://www.ags.school.nz/assets/Uploads/AGS-Print-COLOUR-1114.jpg" alt="AGS" height="500" width="500">
    
     <font color="gold" font size="60">COMING SOON</font>    
     <hr class="w3-border-grey" style="margin:auto;width:40%">
