--- a/index.html
+++ b/index.html
@@ -310,7 +310,18 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- Footer -->
   <footer class="w3-container w3-padding-16 w3-light-grey">
     <h4>FOOTER</h4>
-    <p> SANJAY AGS COPYRIGHT 2019 ALL RIGHTS RESERVED </P>
+    <marquee
+            behavior="alternate"
+            direction="down"
+            height="100px"
+            style="position: absolute"
+            width="300
+            px"
+        >
+            <marquee behavior="alternate">
+                SANJAY AGS 2019, ALL RIGHTS RESERVED
+            </marquee>
+        </marquee>
   </footer>
 
   <!-- End page content -->
