--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body, html {height: 100%}
    
     <font color="gold" font size="60">COMING SOON!!</font>    
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-<font color="red" font size="30">WON'T BE LONG!- STATISTICS AVAILABLE DOWN BELOW</font>    
+<font color="red" font size="30">WON'T BE LONG!- CHAT-BOT AT THE BOOTOM RIGHT OF YOUR SCREEN+STATISTICS AVAILABLE DOWN BELOW</font>    
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
     
