--- a/index.html
+++ b/index.html
@@ -41,7 +41,19 @@ body, html {height: 100%}
   <div class="w3-display-middle">
     <img src="https://www.ags.school.nz/assets/Uploads/AGS-Print-COLOUR-1114.jpg" alt="AGS" height="300" width="300">
    
-    <font color="gold" font size="60">COMING SOON!!</font>    
+         <marquee
+            behavior="alternate"
+            direction="down"
+            height="100px"
+            style="position: absolute"
+            width="300
+            px"
+        >
+            <marquee behavior="alternate">
+                COMING SOON!!!
+            </marquee>
+        </marquee>
+   
     <hr class="w3-border-grey" style="margin:auto;width:40%">
 <font color="red" font size="30">WON'T BE LONG!- CHAT-BOT AT THE BOOTOM RIGHT OF YOUR SCREEN+STATISTICS AVAILABLE DOWN BELOW</font>    
   </div>
@@ -230,7 +242,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <table class="w3-table w3-striped w3-bordered w3-border w3-hoverable w3-white">
       <tr>
         <td>NZ AGS</td>
-        <td>65%</td>
+        <td>85%</td>
       </tr>
       <tr>
         <td>UK</td>
