--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body, html {height: 100%}
             width="300
             px"
         >
-            <marquee behavior="alternate">
+            <marquee behavior="alternate" font color="gold" font size="16">
                 COMING SOON!!!
             </marquee>
         </marquee>
