--- a/index.html
+++ b/index.html
@@ -41,18 +41,12 @@ body, html {height: 100%}
   <div class="w3-display-middle">
     <img src="https://www.ags.school.nz/assets/Uploads/AGS-Print-COLOUR-1114.jpg" alt="AGS" height="300" width="300">
    
-         <marquee
-            behavior="alternate"
-            direction="down"
-            height="100px"
-            style="position: absolute"
-            width="300
-            px"
-        >
-            <marquee behavior="alternate" font color="gold" font size="16">
-                COMING SOON!!!
-            </marquee>
-        </marquee>
+       <marquee behavior="alternate" direction="down" height="100px" style="position: absolute" width="300
+            px">
+    <marquee behavior="alternate">
+        <font color="gold" font size="16" COMING SOON!!!>
+    </marquee>
+</marquee>
    
     <hr class="w3-border-grey" style="margin:auto;width:40%">
 <font color="red" font size="30">WON'T BE LONG!- CHAT-BOT AT THE BOOTOM RIGHT OF YOUR SCREEN+STATISTICS AVAILABLE DOWN BELOW</font>    
