--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@ body, html {height: 100%}
        <marquee behavior="alternate" direction="down" height="100px" style="position: absolute" width="300
             px">
     <marquee behavior="alternate">
-        <font color="gold" font size="16" COMING SOON!!!>
+	    <font color="gold" font size="16"> COMING SOON!!! </font>
     </marquee>
-</marquee>
    
     <hr class="w3-border-grey" style="margin:auto;width:40%">
 <font color="red" font size="30">WON'T BE LONG!- CHAT-BOT AT THE BOOTOM RIGHT OF YOUR SCREEN+STATISTICS AVAILABLE DOWN BELOW</font>    
