--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@ body, html {height: 100%}
     
   </div>
   <div class="w3-display-middle">
-    <img src="https://www.ags.school.nz/assets/Uploads/AGS-Print-COLOUR-1114.jpg" alt="AGS" height="300" width="300">
+    <marquee behavior="scroll" direction="left">
+<img src="https://www.ags.school.nz/assets/Uploads/AGS-Print-COLOUR-1114.jpg" alt="AUCKLAND GRAMMAR SCHOOL">
+</marquee>
    
        <marquee behavior="alternate" direction="down" height="100px" style="position: absolute" width="300
             px">
