--- a/index.html
+++ b/index.html
@@ -39,16 +39,11 @@ body, html {height: 100%}
     
   </div>
   <div class="w3-display-middle">
-    <marquee behavior="scroll" direction="left">
-<img src="https://www.ags.school.nz/assets/Uploads/AGS-Print-COLOUR-1114.jpg" alt="AUCKLAND GRAMMAR SCHOOL">
+<marquee behavior="slide" direction="left">
+<img src="https://www.ags.school.nz/assets/Uploads/AGS-Print-COLOUR-1114.jpg" width="300" height="300" alt="Flying Bat">
+
 </marquee>
-   
-       <marquee behavior="alternate" direction="down" height="100px" style="position: absolute" width="300
-            px">
-    <marquee behavior="alternate">
-	    <font color="gold" font size="16"> COMING SOON!!! </font>
-    </marquee>
-   
+       HO
     <hr class="w3-border-grey" style="margin:auto;width:40%">
 <font color="red" font size="30">WON'T BE LONG!- CHAT-BOT AT THE BOOTOM RIGHT OF YOUR SCREEN+STATISTICS AVAILABLE DOWN BELOW</font>    
   </div>
