--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@ body, html {height: 100%}
 <img src="https://www.ags.school.nz/assets/Uploads/AGS-Print-COLOUR-1114.jpg" width="300" height="300" alt="AUCKLAND GRAMMAR SCHOOL">
 </marquee>
 
-       HO
+       
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-<font color="red" font size="30">WON'T BE LONG!- CHAT-BOT AT THE BOOTOM RIGHT OF YOUR SCREEN+STATISTICS AVAILABLE DOWN BELOW</font>    
+	  <font color="gold" font size="16">COMING SOON!!!</font>    
+<font color="red" font size="30">WON'T BE LONG!- CHAT-BOT AT THE BOTTOM RIGHT OF YOUR SCREEN+STATISTICS AVAILABLE DOWN BELOW</font>    
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
     
