--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ body, html {height: 100%}
 
        
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-	  <font color="gold" font size="16">COMING SOON!!!</font>    
-<font color="red" font size="30">WON'T BE LONG!- CHAT-BOT AT THE BOTTOM RIGHT OF YOUR SCREEN+STATISTICS AVAILABLE DOWN BELOW</font>    
+	  <font color="gold" font size="20">COMING SOON!!!</font>    
+<font color="red" font size="30">(RIGHT NOW!) CHATBOT AT THE BOTTOM RIGHT OF YOUR SCREEN + STATISTICS AVAILABLE BELOW ⬇️</font>    
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
     
