--- a/index.html
+++ b/index.html
@@ -264,15 +264,15 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <ul class="w3-ul w3-card-4 w3-white">
       <li class="w3-padding-16">
         <img src="/w3images/avatar2.png" class="w3-left w3-circle w3-margin-right" style="width:35px">
-        <span class="w3-xlarge">Mike</span><br>
+        <span class="w3-xlarge">147.49.252.233</span><br>
       </li>
       <li class="w3-padding-16">
         <img src="/w3images/avatar5.png" class="w3-left w3-circle w3-margin-right" style="width:35px">
-        <span class="w3-xlarge">AFTAB</span><br>
+        <span class="w3-xlarge">219.174.63.175</span><br>
       </li>
       <li class="w3-padding-16">
         <img src="/w3images/avatar6.png" class="w3-left w3-circle w3-margin-right" style="width:35px">
-        <span class="w3-xlarge">JESS RHODES</span><br>
+        <span class="w3-xlarge">137.72.212.71</span><br>
       </li>
     </ul>
   </div>
