--- a/index.html
+++ b/index.html
@@ -278,6 +278,9 @@ SANJAY AGS 2019, ALL RIGHTS RESERVED</span>
     </ul>
   </div>
   <hr>
+	<body>
+  <h2>Try to right-click with your mouse or click on f12</h2>
+</body>
 
   <div class="w3-container">
     <h5>Recent Comments</h5>
@@ -367,6 +370,7 @@ function w3_close() {
   overlayBg.style.display = "none";
 }
 </script>
+	
 
 </body>
 </html>
