--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ SANJAY AGS 2019, ALL RIGHTS RESERVED</span>
   </div>
   <hr>
 	<body>
-  <h2>Try to right-click with your mouse or click on f12</h2>
+  <h2>COMMENTS</h2>
 </body>
 
   <div class="w3-container">
