--- a/index.html
+++ b/index.html
@@ -328,6 +328,13 @@ SANJAY AGS 2019, ALL RIGHTS RESERVED</span>
       </div>
     </div>
   </div>
+	-webkit-touch-callout: none; /* iOS Safari */
+ -webkit-user-select: none; /* Safari */
+ -khtml-user-select: none; /* Konqueror HTML */
+ -moz-user-select: none; /* Firefox */
+ -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently */
+
 
   <!-- Footer -->
   <footer class="w3-container w3-padding-16 w3-light-grey">
