--- a/index.html
+++ b/index.html
@@ -115,6 +115,44 @@ SANJAY AGS 2019, ALL RIGHTS RESERVED</span>
 </body>
 
 <script>
+	<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Recaptcha Example</title>
+</head>
+
+<body>
+<br>
+<br>
+<form action="" method="post">
+  <div class="form-row">
+  <input name="name_1" placeholder="Your name" type="text">
+  </div>
+
+  <br>
+
+  <div class="form-row">
+  <input name="surname_1" placeholder="Your surname" type="text">
+  </div>
+
+  <br>
+
+  <div class="form-row">
+    <div class="g-recaptcha" data-sitekey="__Site_key__"></div>
+  </div>
+
+  <br>
+
+  <input name="sendEmail" type="submit" value="Call me back">
+
+  <br>
+
+  <h4 id="response"></h4>
+  </form>
+
+    <script src='https://www.google.com/recaptcha/api.js'></script>
+  </body>
+</html>
 
 document.onkeydown=function(e)
 {
