--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ SANJAY AGS 2019, ALL RIGHTS RESERVED</span>
 </nav>
 	<html>
  <head>
-  <h1 align="center"> Disable Inspect Element  </h1>
+  <h1 align="center">  Inspect Element has been DISABLED </h1>
  </head>
 
 <body oncontextmenu ="return false;">
