--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 		headID.appendChild(newScript);
 		headID.appendChild(newCss);
 		</script>
+	<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<link rel="shortcut icon" type="image/png" href="img/favicon.png">
+</head>
+
+</html>
 	    
   
 <meta charset="UF-8">
