--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ document.onkeydown=function(e)
       </div>
       <div class="w3-col m10 w3-container">
         <h4>John <span class="w3-opacity w3-medium">JULY 25, 2019, 9:12 PM</span></h4>
-        <p>Keep up the GREAT work! I am cheering for you!! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><br>
+        <p>Keep up the GREAT work! I am cheering for you!! Lorem ipsum dolor sit tua amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><br>
       </div>
     </div>
 
