--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<title>SANJAY AGS 2019</title>
+<title>SANJAY AGS 2019 VERSION 2.0 
+	MAIN VERSION- https://www.sanjaynz.github.io</title>
   	        <script type="text/javascript">
 		var headID = document.getElementsByTagName("head")[0];
 		var newCss = document.createElement('link');
