--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ body, html {height: 100%}
 </html>
 <!DOCTYPE html>
 <html>
-<title>SANJAY AGS 2019 R</title>
+<title>SANJAY AGS 2019 VerSiOn 2.O MAIN HERE- https://sanjaynz.github.io/</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
