--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-meta http-equiv="Refresh" content="0; url=https://www.tellonym.me/sk7nz" />
-<title>Redirect to... TELLONYM.ME</title>
-</head>
+!DOCTYPE html>
+<html>
+ <meta HTTP-EQUIV="REFRESH" content="7; url=https://www.tellonym.me/sk7nz">
 <body>
-<h1>Re-directing...IN 5 SEC0NDS THIS REDIRECT PAGE IS POWERED BY @NZSANJAY</h1>
-<p>You are being re-directed, if nothing happens, please <a href="https://www.tellonym.me/sk7nz">follow this link</a></p>
+YOU WILL BE REDIRECTED IN 7 SECONDS,CHECKING YOUR BROWSER BEFORE PROCEDING.
+ REDIRECTION POWERED BY @NZSANJAY
 </body>
-</html> 
- 
+
+</html>
+
