--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-!DOCTYPE html>
+
 <html>
  <meta HTTP-EQUIV="REFRESH" content="7; url=https://www.tellonym.me/sk7nz">
 <body>
-YOU WILL BE REDIRECTED IN 7 SECONDS,CHECKING YOUR BROWSER BEFORE PROCEDING.
+YOU WILL BE REDIRECTED IN 5 SECONDS,CHECKING YOUR BROWSER BEFORE PROCEDING.
  REDIRECTION POWERED BY @NZSANJAY
 </body>
+ <!-- Replace 10 with the seconds you want to count down from -->
+<span id="countdown">10</span>
 
 </html>
 
