--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html>
  <meta HTTP-EQUIV="REFRESH" content="7; url=https://www.tellonym.me/sk7nz">
 <body>
-YOU WILL BE REDIRECTED IN 5 SECONDS,CHECKING YOUR BROWSER BEFORE PROCEDING.
- REDIRECTION POWERED BY @NZSANJAY
-</body>
- <!-- Replace 10 with the seconds you want to count down from -->
-<span id="countdown">10</span>
+<p><font color="red">YOU WILL BE REDIRECTED IN 5 SECONDS,CHECKING YOUR BROWSER BEFORE PROCEDING.</font></p>
+<p><font color="blue">REDIRECTION POWERED BY @NZSANJAY</font></p>
+ </body>
 
 </html>
 
