--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <meta HTTP-EQUIV="REFRESH" content="7; url=https://www.tellonym.me/sk7nz">
 <body>
-<p><font color="red">YOU WILL BE REDIRECTED IN 5 SECONDS,CHECKING YOUR BROWSER BEFORE PROCEDING.</font></p>
-<p><font color="blue">REDIRECTION POWERED BY @NZSANJAY</font></p>
+<p><font color="gold">YOU WILL BE REDIRECTED IN 5 SECONDS,CHECKING YOUR BROWSER BEFORE PROCEDING.</font></p>
+<p><font color="red">REDIRECTION POWERED BY @NZSANJAY</font></p>
  </body>
 </html>
