--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
- <meta HTTP-EQUIV="REFRESH" content="7; url=https://www.tellonym.me/sk7nz">
+ <meta HTTP-EQUIV="REFRESH" content="5; url=https://sanjaynz.github.io//">
 <body>
 <p><font color="red" font size=40>YOU WILL BE REDIRECTED IN 5 SECONDS,CHECKING YOUR BROWSER BEFORE PROCEDING.</font></p>
 <p><font color="blue" font size=50>REDIRECTION POWERED BY @NZSANJAY</font></p>
