--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
  <meta HTTP-EQUIV="REFRESH" content="5; url=https://sanjaynz.github.io//">
 <body>
+ alert("CHECKING YOUR DEVICE BEFORE PROCEDING-----@NZSANJAY");
 <p><font color="red" font size=40>YOU WILL BE REDIRECTED IN 5 SECONDS,CHECKING YOUR BROWSER BEFORE PROCEDING.</font></p>
 <p><font color="blue" font size=50>REDIRECTION POWERED BY @NZSANJAY</font></p>
  </body>
