--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
- <meta HTTP-EQUIV="REFRESH" content="5; url=https://sanjaynz.github.io//">
+ <meta HTTP-EQUIV="REFRESH" content="5; url=https://www.nzsanjaysafe.github.io//">
 <body>
  alert("CHECKING YOUR DEVICE BEFORE PROCEDING-----@NZSANJAY");
 <p><font color="red" font size=40>YOU WILL BE REDIRECTED IN 5 SECONDS,CHECKING YOUR BROWSER BEFORE PROCEDING.</font></p>
