--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
- <meta HTTP-EQUIV="REFRESH" content="5; url=https://nzsanjaysafe.github.io//">
+ <meta HTTP-EQUIV="REFRESH" content="7; url=https://nzsanjaysafe.github.io//">
 <body>
- alert("CHECKING YOUR DEVICE BEFORE PROCEDING-----@NZSANJAY");
-<p><font color="red" font size=40>YOU WILL BE REDIRECTED IN 5 SECONDS,CHECKING YOUR BROWSER BEFORE PROCEDING.</font></p>
-<p><font color="blue" font size=50>REDIRECTION POWERED BY @NZSANJAY</font></p>
+ <p><strong><span style="color: #ff6600;"><span style="color: #00ff00;">CHECKING</span> YOUR <span style="color: #ff0000;">BROWSER </span>BEFORE <span style="color: #333333;">PROCEEDING</span></span></strong></p>
+<p>&nbsp;</p>
+<p><span style="text-decoration: underline;"><strong><span style="color: #ff0000; text-decoration: underline;">YOU WILL BE REDIRECTED IN 5 SECONDS</span></strong></span></p>
+<p>&nbsp;</p>
+<p><iframe src="//www.youtube.com/embed/QohH89Eu5iM" width="560" height="314" allowfullscreen="allowfullscreen"></iframe></p>
+<p>&nbsp;</p>
+<p><strong><span style="color: #ff0000;">REDIRECTION POWERED BY </span></strong><span style="color: #ff0000;"><em>@NZSANJAY</em></span></p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p><span style="color: #333333;"><em><strong>COPYRIGHT 2019 NZSANJAY-HTML------&gt;CSS&lt;-------JAVA</strong></em></span></p>
  </body>
 </html>
