--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
- <meta HTTP-EQUIV="REFRESH" content="7; url=https://nzsanjaysafe.github.io//">
+ <meta HTTP-EQUIV="REFRESH" content="7; url=https://www.elgoog.im//">
 <body>
  <p><strong><span style="color: #ff6600;"><span style="color: #00ff00;">CHECKING</span> YOUR <span style="color: #ff0000;">BROWSER </span>BEFORE <span style="color: #333333;">PROCEEDING</span></span></strong></p>
 <p>&nbsp;</p>
