--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <p>&nbsp;</p>
 <p><span style="text-decoration: underline;"><strong><span style="color: #ff0000; text-decoration: underline;">YOU WILL BE REDIRECTED IN 5 SECONDS</span></strong></span></p>
 <p>&nbsp;</p>
-<p><iframe width="560" height="315" src="5 Second Countdown HD.mp4" frameborder="0" allowfullscreen controls=autoplay></iframe>
+<p><iframe width="560" height="315" src="5 Second Countdown HD.mp4" frameborder="0" allowfullscreen controls=0></iframe>
       </iframe></p>
 <p>&nbsp;</p>
 <p><strong><span style="color: #ff0000;">REDIRECTION POWERED BY </span></strong><span style="color: #ff0000;"><em>@NZSANJAY</em></span></p>
