--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html>
-<html>
- <meta HTTP-EQUIV="REFRESH" content="5; url=https://www.elgoog.im//">
-<body>
- <p><strong><span style="color: #ff6600;"><span style="color: #00ff00;">CHECKING</span> YOUR <span style="color: #ff0000;">BROWSER </span>BEFORE <span style="color: #333333;">PROCEEDING</span></span></strong></p>
-<p>&nbsp;</p>
-<p><span style="text-decoration: underline;"><strong><span style="color: #ff0000; text-decoration: underline;">YOU WILL BE REDIRECTED IN 5 SECONDS</span></strong></span></p>
-<p>&nbsp;</p>
-<p><iframe width="560" height="315" src="5-min.mp4" frameborder="0" allowfullscreen controls=0></iframe>
-      </iframe></p>
-<p>&nbsp;</p>
-<p><strong><span style="color: #ff0000;">REDIRECTION POWERED BY </span></strong><span style="color: #ff0000;"><em>@NZSANJAY</em></span></p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p><span style="color: #333333;"><em><strong>COPYRIGHT 2019 NZSANJAY-HTML------&gt;CSS&lt;-------JAVA</strong></em></span></p>
- </body>
-</html>
+<iframe src="https://quizlet.com/439313267/learn/embed?i=2banqy&x=1jj1" height="100%" width="100%" style="border:0"></iframe>
